apps/devenv/overlays/staging/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ttyd
  namespace: devenv
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`devenv.staging.sneakysquid.xyz`)"
      kind: Rule
      services:
        - name: ttyd
          port: 7681
